# ofxAruco

./: CMakeLists.txt
example/src/: ofApp.cpp
libs/aruco-1.3.0/: CMakeLists.txt
libs/aruco-1.3.0/src/: CMakeLists.txt  arucofidmarkers.cpp  arucofidmarkers.h  board.cpp  board.h  boarddetector.cpp  boarddetector.h  cameraparameters.cpp  cameraparameters.h  chromaticmask.cpp  chromaticmask.h  highlyreliablemarkers.cpp  highlyreliablemarkers.h  marker.cpp  marker.h  markerdetector.cpp  markerdetector.h  subpixelcorner.cpp  subpixelcorner.h
src/: ofxAruco.cpp
